[package]
name = "clear-mind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { version = "0.5.2", features = ["mp3"] }
num-traits = "0.2"
simple_moving_average = "0.1.2"
color-eyre = "0.6.2"
humantime = "2.1.0"
ureq = "2.6.2"
static_assertions = "1.1.0"

[profile.release]
debug = true
